- Fehler behoben - LaTeX-Code verbessert
git-svn-id: https://svn.lug-jena.de/uni-skripte@1215 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/haberland-algebra/skript.ltx
+++ b/haberland-algebra/skript.ltx
@@ -439,8 +439,7 @@ Wir verabreden folgende Bezeichnungen:
   \begin{enumerate}
    \item $f\colon G\rightarrow H$. Dann gilt $f(e_{G})=e_{H}$, denn
     $f(e_{G}e_{G})=f(e_{G})=f(e_{G})f(e_{G})$.
-   \item $f(x^{-1})=f(x)^{-1}$, denn $f(x)f(x^{-1})= f(xx^{-1})= f(e)= f(x)
-    f(x)^{-1}$.
+   \item $f(x^{-1})=f(x)^{-1}$.
   \end{enumerate}
 \end{bemerk}
 
@@ -475,7 +474,7 @@ Wir verabreden folgende Bezeichnungen:
   Sei $G$ eine Gruppe und $S\subseteq G$ eine Teilmenge. Dann existiert eine
   kleinste $S$ umfassende Untergruppe.
   \begin{proof}
-    Sei $H$ der Schnitt aller Untergruppen einer Gruppe $G$. Dann ist $H$ minimal.
+    Sei $H$ der Schnitt aller dieser Untergruppen. Dann ist $H$ minimal.
   \end{proof}
 \end{fakt}
 
@@ -484,11 +483,11 @@ Wir verabreden folgende Bezeichnungen:
 \end{defini}
 
 \begin{fakt}
-  Seien $S,G$ wie oben. Dann ist $\langle s\rangle= \{x_{1}\cdot\dotso\cdot
+  Seien $S,G$ wie oben. Dann ist $\langle s\rangle= \{x_{1}\dotso
   x_{m}\colon m\in\N, x_{i}\in S \text{ oder } x_{i}^{-1}\in S\}$.
   \begin{proof}
     Rechts steht eine Untergruppe, welche $S$ umfasst. Jedes Produkt
-    $x_{1}\cdot\dotso\cdot x_{m}\in\langle s\rangle$.
+    $x_{1}\dotso x_{m}\in\langle s\rangle$.
   \end{proof}
 \end{fakt}
 
@@ -593,7 +592,7 @@ Wir verabreden folgende Bezeichnungen:
    \item $\sgn\colon S_{n}\rightarrow\{1,-1\}, \ker\sgn=A_{n}$
    \item $\phi_{n}\colon\C^{*}\rightarrow\C^{*}, z\mapsto z^{n},
     n\in\N\Rightarrow \ker(\phi_{n})= \mu_{n}=\{e^{2\pi i\nicefrac{r}{n}},
-    0\leq r\leq n\}$. Der Kern heißt auch Gruppe der $n$"~ten Einheitswurzeln.
+    0\leq r\leq r\}$. Der Kern heißt auch Gruppe der $n$"~ten Einheitswurzeln.
   \end{enumerate}
 \end{bsp}
 
@@ -613,8 +612,7 @@ Wir müssen noch die Unabhängigkeit von Repräsentanten zeigen:
   b+m\Z &= b_{1}+m\Z\\
   \Rightarrow(a_{1}+b_{1})+m\Z &= (a+b)+m\Z
 \end{align*}
-Das neutrale Element dieser Addition ist $m\Z$ und $-(a+m\Z)=(-a)+m\Z$ ist
-inverses Element.
+Das neutrale Element dieser Addition ist $m\Z$ und $-(a+m\Z)=(-a)+m\Z$.
 
 \begin{bsp}
   Es gilt $10\equiv1\pmod{9}\Rightarrow10^{n}\equiv1\pmod{9}$. Damit gilt für
@@ -685,6 +683,14 @@ Dies sind die einfachsten Gruppen.
   Eine Gruppe heißt \highl{zyklisch}, wenn ein $x\in G\colon G=\langle
   x\rangle$ existiert oder $G$ lässt sich von einem Element erzeugen.
 \end{defini}
+
+\begin{bsp}
+  \begin{itemize}
+   \item $\Z$ mit Addition (1 oder -1).
+   \item $\Z/_{m\Z}$ wird von jeder Restklasse $a+m\Z$ mit $\ggt(a,m)=1$
+    erzeugt. (ÜA)
+  \end{itemize}
+\end{bsp}
 
 \begin{fakt}
   \begin{enumerate}
@@ -819,7 +825,7 @@ Dies sind die einfachsten Gruppen.
 \section{Permutationsgruppen}
 
 \begin{defini}
-  Seien $X$  ein Menge und $S (X)$ die Bijektionen auf dieser Menge. Dann
+  Sei $X$  ein Menge und $S (X)$ die Bijektionen auf dieser Menge. Dann
   $X =\{1, 2, \ldots, n\}, S_n = S (X)$.
 \end{defini}
 
@@ -853,16 +859,18 @@ Dies sind die einfachsten Gruppen.
 
 \begin{defini}
   Eine Permutation heißt \highl{Zyklus}: Es existieren
-  $x_1, x_2, \ldots, x_m \in \{1, 2, \ldots, n\}, m \geq 2$, paarweise
-  verschieden, so dass
+  $x_1, x_2, \ldots, x_m \in \{1, 2, \ldots, n\}$ $m \geqslant 2$, paarweise
+  verschieden s.\,d.
   \begin{enumerate}
     \item $\sigma x_1 = x_2, \sigma x_2 = x_3, \ldots, \sigma x_m = x_1$
     
-    \item $\sigma y = y$ für alle $y \neq x_i$
+    \item $\sigma y = y \forall y \neq x_i$
   \end{enumerate}
-  Man schreibt dann $\sigma = (x_1, x_2, \ldots, x_m)$. Diese Schreibweise ist
-  nicht ganz eindeutig, denn $d = (x_2, \ldots, x_m, x_1)$. Für $m = 2$ heißt
-  die Abbildung auch \highl{Transposition}.
+  Man schreibt dann $\sigma = (x_1, x_2, \ldots, x_m)$
+  
+  (Nicht ganz eindeutig: $d = (x_2, \ldots, x_m, x_1)$)
+  
+  $m = 2 - \highl{Transposition}$
 \end{defini}
 
 \begin{bemerk}
@@ -872,33 +880,42 @@ Dies sind die einfachsten Gruppen.
 \begin{fakt}
   Jede Permutation ist das Produkt disjunkter Zyklen. Die Darstellung ist bis
 auf Reihenfolge eindeutig.
-  \begin{proof}
-    Sei $X =\{1, 2, \ldots, n\}$ und $\sigma \in S (X)$. Also $\sigma\colon X
-    \rightarrow X$. Für $x \in X$ heißt $X_{\sigma}$ \highl{Bahn} oder
-    \highl{Orbit} von $x$, wenn gilt: $X_{\sigma} (x)
-    =\{\ldots,\sigma^{-2}(x), \sigma^{-1} (x), x, \sigma (x), \sigma^2 (x),
-    \ldots\}$. Zwei Bahnen sind disjunkt oder identisch. Denn sei $z \in
-    X_{\sigma} (x) \cap X_{\sigma} (y)$. Dann ist $z = \sigma^k (x) = \sigma^l
-    (y)\Rightarrow\sigma^{k - l} (x) = y\Rightarrow y \in X_{\sigma}
-    (x)\Rightarrow X_{\sigma} (y) \subset X_{\sigma} (x)$. Wegen der Symmetrie
-    folgt, $X_{\sigma} (x) = X_{\sigma} (y)$. Somit zerfällt $X$ in Bahnen und
-    $\sigma$ operiert auf jeder Bahn als Zyklus. Damit ist $\sigma$  Produkt
-    disjunkter Zyklen. Die Eindeutigkeit ist als Übung zu beweisen.
-  \end{proof}
 \end{fakt}
 
-%ist das vielleicht eher ein Fakt?
+\begin{proof}
+  $\sigma \in S (X), X =\{1, 2, \ldots, n\}$ Also $\sigma\colon X \rightarrow
+  X$. Sei $x \in X$, die \highl{Bahn} (das \highl{Orbit}) von $x$ ist:
+  $X_{\sigma} (x) =\{\ldots \sigma^{- 1} (x), x, \sigma (x), \sigma^2 (x),
+  \ldots\}$
+  
+  Zwei Bahnen sind disjunkt oder identisch.
+  
+  Sei dazu $z \in X_{\sigma} (x) \cap X_{\sigma} (y)$
+  
+  $z = \sigma^k (x) = \sigma^l (y)$ $\Rightarrow$ $\sigma^{k - l} (x) = y$
+  $\Rightarrow y \in X_{\sigma} (x)$ $\Rightarrow X_{\sigma} (y)
+  \subset X_{\sigma} (x)$ Symmetrie: $X_{\sigma} (x) = X_{\sigma} (y)$
+  
+  Somit zerfällt in Bahnen.
+  
+  $\sigma$ operiert auf jeder Bahn als Zyklus
+  
+  $\Rightarrow \sigma$ ist Produkt disjunkter Zyklen. Eindeutigkeit ist üA.
+\end{proof}
+
 \begin{satz}
-  $S_n$ wird von $(1, 2), (1, 3), \ldots, (1, n)$ erzeugt.
+  $S_n$ wird erzeigt von $(1, 2), (1, 3), \ldots, (1, n)$
   \begin{proof}
   Jeder Zyklus ist Produkt von Transpositionen: $(1, 2, \ldots, m) = (1, 2,
-  \ldots, m - 1) (m - 1, m)$. Jede Transposition ist Produkt der obigen
-    Transpositionen: $(a, b) = (1, a) (1, b) (1, a)$.
+  \ldots, m - 1) (m - 1, m)$
+  
+  Jede Transposition ist Produkt der obigen Transpositionen: $(a, b) = (1, a)
+  (1, b) (1, a)$
 \end{proof}
 \end{satz}
 
 \begin{satz}
-  $(1, 2), (2, 3), \ldots, (n - 1, n)$ erzeugen $S_n$.
+  $(1, 2), (2, 3), \ldots, (n - 1, n)$ erzeugen $S_n$
   \begin{proof}
   $(1, a) = (1, 2) (2, 3) \cdots (a - 2, a - 1) (a - 1, a) (a - 2, a - 1)
   \cdots (2, 3) (1, 2)$
@@ -912,8 +929,8 @@ auf Reihenfolge eindeutig.
 \begin{defini}
   Das \highl{Signum} einer Permutation ist
   \begin{gather*}
-    \sgn (\sigma) = \underset{\{i, j\}}{\prod} \frac{\sigma i - \sigma j}{i -
-       j}
+    \sgn (\sigma) = \underset{\{i, j\}}{\prod} \frac{\sigma i - \sigma
+  j}{i - j}
   \end{gather*}
   Dabei durchläuft $\{i,j\}$ alle $\binom{n}{2}$ zweielementigen Teilmengen in
   $\{1, 2, \ldots, n\}$.
@@ -922,7 +939,7 @@ auf Reihenfolge eindeutig.
     j - \sigma i}{j - i}$
     
     \item mit $\{i, j\}$ durchläuft auch $\{\tau i, \tau j\}$ alle
-    2-elementigen Teilmengen für $\tau \in S_n$
+    zweielementigen Teilmengen, $\tau \in S_n$
     
     \item $\sgn (\sigma) = \pm 1$
     
@@ -933,28 +950,25 @@ auf Reihenfolge eindeutig.
   \end{itemize}
   Varianten:
   \begin{enumerate}
-    \item $\sgn (\sigma)$ = $(- 1)^{\text{Anzahl der Fehlstellungen in
-    der Folge $\sigma_1, \sigma_2, \ldots, \sigma_n$ $(i < j, \sigma i >
-    \sigma j)$}}$
+    \item $\sgn (\sigma) = (- 1)$ Anzahl der Fehlstellungen in
+    der Folge $\sigma_1, \sigma_2, \ldots, \sigma_n$ mit  $i < j, \sigma i >
+    \sigma j$
     
-    \item $\sgn (\sigma) = (- 1)^{(n -\# \text{ Bahnen von }
-    \sigma)}$
+    \item $\sgn (\sigma) = (- 1)$ $(n -\#)$  Bahnen von $\sigma$
     
-    \item $[\sgn (\sigma) = \det ( \underset{i = 1}{\overset{n}{\sum}}
-    \qquad E_{\sigma i.i})]$
+    \item $[\sgn (\sigma) = \det \left( \sum_{i=1}^{n} E_{\sigma i.i}\right)]$
     
-    \item $\sgn (\sigma) = \underset{i > j}{\prod} (\sgn (\sigma i
-    - \sigma j) $
+    \item $\sgn (\sigma) = \prod_{i>j} (\sgn (\sigma i - \sigma j) $
     
     \item $\sgn (x_1, \ldots, x_m) = (- 1)^{m + 1}$
   \end{enumerate}
 \end{defini}
 
 \begin{defini}
-  Die \highl[Gruppe!alternierende]{alternierende Gruppe} $A_n$ ist die Untergruppe der
-  Permutationen aus $S_n$ mit $\sgn (\sigma) = 1$.
+  Die \highl[Gruppe!alternierende]{alternierende Gruppe} $A_n$ ist die
+  Untergruppe der Permutationen aus $S_n$ mit $\sgn (\sigma) = 1$.
   
-  Es gilt $(S_n : A_n) = 2$
+  Es gilt $(S_n \colon A_n) = 2$
 \end{defini}
 
 \begin{fakt}
@@ -963,35 +977,23 @@ auf Reihenfolge eindeutig.
 \end{fakt}
 
 \begin{proof}
-  Jedes $\sigma \in A_n$ ist Produkt von Transpositionen $(1, a)$, $2
-  \leqslant a \leqslant n$. Die Anzahl der Faktoren ist gerade.
-  
-  $(1, a) (1, b) = (1, b, a)$
-  
-  $(1, b, a) = (1, 2, a) (1, 2, b) (1, 2, b)$
+  Jedes $\sigma \in A_n$ ist Produkt von Transpositionen $(1, a), 2
+  \leq a \leq n$. Die Anzahl der Faktoren ist gerade. Also $(1, a) (1, b) =
+  (1, b, a)$ und $(1, b, a) = (1, 2, a) (1, 2, b) (1, 2, b)$.
 \end{proof}
 
-\subsection{1.4 - Normalteiler}
+\section{Normalteiler}
 
 Beobachtung: $f \colon G \rightarrow H$ Homomorphismus, $N = \ker (f)$ hat
-spezifische Eigenschaft.
-
-$x \in N$, $s \in G \Rightarrow s x s^{- 1} \in N$
-
-$f (s x s^{- 1}) = f (s) f (x) f (s)^{- 1} = 1$
-
-Kompakt: $s N s^{- 1} = N \Leftrightarrow s N = N s$
-
-Diese Eigenschaft haben beliebige Untergruppen nicht: $G = S_3,$ $N
-=\{\iota, (1, 2)\}$
-
-z.\,B. $(1, 3) (1, 2) (1, 3)^{- 1} = (1, 3) (1, 2) (1, 3) = (2, 3) \notin N$.
+spezifische Eigenschaft. Für  $x \in N, s \in G \Rightarrow s x s^{- 1} \in N$
+sowie $f (s x s^{- 1}) = f (s) f (x) f (s)^{- 1} = 1$. Kompakt: $s N s^{- 1} =
+N \Leftrightarrow s N = N s$. Beliebige Untergruppen haben nicht diese
+Eigenschaft: $G = S_3, N=\{\iota, (1, 2)\}$, z.\,B. $(1, 3) (1, 2) (1, 3)^{-
+1} = (1, 3) (1, 2) (1, 3) = (2, 3) \notin N$.
 
 \begin{defini}
-  Eine Untergruppe $H \subset G$ mit der Eigenschaft $sGs^{- 1} = H \forall s
-  \in G$
-  
-  heißt \highl{Normalteiler} von $G$.
+  Eine Untergruppe $H \subseteq G$ mit der Eigenschaft $sGs^{- 1} = H$ für
+  alle $s \in G$ heißt \highl{Normalteiler} von $G$.
   
   äquivalent: $sH = Hs$
 \end{defini}
@@ -999,21 +1001,18 @@ z.\,B. $(1, 3) (1, 2) (1, 3)^{- 1} = (1, 3) (1, 2) (1, 3) = (2, 3) \notin N$.
 \begin{bsp}
   In abelschen Gruppen sind alle Untergruppen Normalteiler.
   \begin{enumerate}
-    \item $A_n$ ist NT in $S_n$, da Kern eines Homomorphismus.
+    \item $A_n$ ist Normalteiler in $S_n$, da Kern eines Homomorphismus.
   \end{enumerate}
 \end{bsp}
-
-
-\todo{Vorlesung vom 2007-11-02}
 
 % Vorlesung vom 2007-11-07
 
 \begin{fakt}
   \begin{enumerate}
    \item Der Durchschnitt von Normalteilern ist wieder ein Normalteiler.
-   \item Sei $N\subseteq H\subseteq G$ Untergruppen, ist $N$ ein Normalteiler
+   \item Seien $N\subseteq H\subseteq G$ Untergruppen. Ist $N$ ein Normalteiler
     in $G\Rightarrow N$ ist Normalteiler in $H$.
-   \item Ist $f\colon G\rightarrow H$ Homomorphismus und $N$ eine Normalteiler
+   \item Ist $f\colon G\rightarrow H$ Homomorphismus und $N$ ein Normalteiler
     in $H$, so ist $f^{-1}(N)$ Normalteiler in $G$.
    \item Ist $f\colon G\rightarrow H$ ein Homomorphismus und $N$ ein
     Normalteiler in $G$, so ist $f(N)$ ein Normalteiler in $f(G)$.
@@ -1059,7 +1058,7 @@ Multiplikation auf $G/_{H}$ mit $(xH)(yH)\coloneqq xyH$.
 \end{bemerk}
 
 \begin{bsp}[Was ist kanonisch?]
-  Ein endlich"=deminsionaler Vektorraum ist nichtkanonisch isomorph zu seinem
+  Ein endlich"=dimensionaler Vektorraum ist nichtkanonisch isomorph zu seinem
   Dualraum, jedoch kanonisch isomorph zu seinem Bidualraum.
 \end{bsp}
 
@@ -1075,12 +1074,11 @@ Multiplikation auf $G/_{H}$ mit $(xH)(yH)\coloneqq xyH$.
     \begin{gather*}
     \begin{xy}
       \xymatrix{
-      G \ar[rr]^{f} \ar[rd]_{\text{kan}} & & G'\ar@{.>}[dl]^{f_{*}}\\
-      & G/_{H} &
+      G \ar[rr]^{f} \ar[rd]_{\text{kan}} & & G'\\ %\ar@{.>}[ld]^{f_{*}}\\
+      & G/_{H}\ar@{.>}[ur]_{f_{*}} &
 	}
     \end{xy}
   \end{gather*}
-  \todo{Pfeil rumdrehen}
   Die Abbildung $f_{*}$ verursacht einen Isomorphismus zwischen $G/_{H}$ und
   $f(G)$.
   \begin{proof}
