- todo aufgelöst - kleinen Abschnitt eingefügt
git-svn-id: https://svn.lug-jena.de/uni-skripte@1228 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/alt-linopt/skript.latex
+++ b/alt-linopt/skript.latex
@@ -1908,10 +1908,15 @@ von $A$ ist.
     $\widehat{w_{l}} \neq 0$ gilt. Wir wissen, $V^{+}$ ist genau dann
     invertierbar, wenn $V^{-1}V^{+}$ invertierbar ist und es gilt,
     $V^{-1}V^{+}=(e^{(1)},\ldots,e^{(l-1)}, \widehat{w_{l}},
-    e^{(l+1)},\ldots,e^{(m)})$ \todo{Beweis prüfen und weiter
-    vervollständigen}
+    e^{(l+1)},\ldots,e^{(m)})$.
   \end{proof}
 \end{lemma}
+
+Wir wenden nun das Lemma an und setzen $v^{(i)}= A_{.b(i)}$ sowie $w=
+A_{.n(j)}$. Dann ist $\widehat{w}= A^{-1}_{B} A_{.n(j)}= \widehat{A}_{.j}$.
+Nach \autoref{lem:39} ist $B^{+}$ genau dann eine Basis von $A$, wenn
+$\widehat{w}\neq 0=\widehat{A}_{l,j}$. Nach der obigen Wahl von $l$ ist
+$\widehat{A}_{l,j}>0$ und es folgt, dass $B^{+}$ Basis ist.
 
 \begin{bem*}
   Die obigen Betrachtungen zeigen, $x_{n(j)}^{*}=0$, da
