--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -293,7 +293,7 @@
 
 % 12.10.04
 
-\pdfbookmark[-1]{Litheraturverzeichnis}{litheraturverzeichnis}
+\pdfbookmark[-1]{Literaturverzeichnis}{litheraturverzeichnis}
 \begin{thebibliography}{99}
  \bibitem{Triebel} H.\,Triebel: Höhere Analysis, Harri Deutsch 1980 (empfohlen)
  \bibitem{Werner} D.\,Werner: Funktionalanalysis, Springer 2004 (empfohlen)
