- TeX-Umschreibung in korrekte Umlaute korrigiert
git-svn-id: https://svn.lug-jena.de/uni-skripte@1244 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/haberland-algebra/skript.ltx
+++ b/haberland-algebra/skript.ltx
@@ -1877,7 +1877,7 @@ konjugiert, wenn $\exists s\in G\colon sH_{1}s^{-1}=H_{2}$.
     $3$-\textsc{Sylow}-Gruppe: $A_3 = \langle(1, 2, 3)\rangle$.
     
     \item Sei $G = S_4, \abs{S_4} = 2^3 \cdot 3$. Es gibt
-    $3$-\textsc{Sylow}-Gruppen: 4 St\"uck, $\langle(1, 2, 3)\rangle$ und
+    $3$-\textsc{Sylow}-Gruppen: 4 Stück, $\langle(1, 2, 3)\rangle$ und
     $2$-\textsc{Sylow}-Gruppen. Eine prominente Untergruppe in $S_4$ ist die
     \textsc{Klein}sche Vierergruppe: $\{\iota, (1, 2) (3, 4), (1, 3) (2, 4),
     (1, 4) (2, 3)\}$. Dies ist abelscher Normalteiler in $S_4$ und es ist
