- Tau durch mathrm{T} ersetzt
git-svn-id: https://svn.lug-jena.de/uni-skripte@1250 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/haberland-algebra/skript.ltx
+++ b/haberland-algebra/skript.ltx
@@ -4032,9 +4032,9 @@ Menge der Einlagerungen.
     also einen $K$"~Automorphismus
     $\lambda=\overline{\sigma}_{i}\circ\overline{\sigma}_{j}^{-1}\colon
     \overline{K}\rightarrow\overline{K}$. Seien
-    $\Tau_{i}\coloneqq\{\text{Fortsetzungen von }\sigma_{i}\text{ zu }
+    $\mathrm{T}_{i}\coloneqq\{\text{Fortsetzungen von }\sigma_{i}\text{ zu }
     E\rightarrow K\}$. Dann verursacht $\lambda$ die Abbildung
-    $\Tau_{j}\rightarrow\Tau_{i}\colon \tau\mapsto\tau\circ\lambda$. Durch
+    $\mathrm{T}_{j}\rightarrow\mathrm{T}_{i}\colon \tau\mapsto\tau\circ\lambda$. Durch
     Vertauschung von $i$ und $j$ erhält man die inverse Abbildung.
 
     Für (ii) kennen wir die Abschätzung schon für $L=K(\alpha)$. Mittels (i)
