- Fehler ausgebessert - Serge Mannen als Reporter mit aufgenommen
git-svn-id: https://svn.lug-jena.de/uni-skripte@1255 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/haberland-algebra/skript.ltx
+++ b/haberland-algebra/skript.ltx
@@ -256,6 +256,8 @@
   \begin{itemize}
    \item \href{mailto:jens@kubieziel.de}{Jens Kubieziel
     \nolinkurl{<jens@kubieziel.de>}} (2007/2008)
+    \item \href{mailto:Serge Mannen}{Serge Mannen
+    \nolinkurl{<serge.mannen@mail.ru>}} (2008)
   \end{itemize}
 }
 
@@ -710,7 +712,7 @@ Das neutrale Element dieser Addition ist $m\Z$ und $-(a+m\Z)=(-a)+m\Z$.
 %satz 1
 \begin{satz}
   Sei $G$ eine endliche Gruppe, $H\subseteq G$ eine Untergruppe. Dann gilt
-  $\card G=(G\colon H)$. Insbesondere teilt die Ordnung jeder Untergruppe die
+  $\card G=(G\colon H)\cdot \card H$. Insbesondere teilt die Ordnung jeder Untergruppe die
   Gruppenordnung.
 \end{satz}
 
