--- a/haberland-algebra/skript.ltx
+++ b/haberland-algebra/skript.ltx
@@ -2194,7 +2194,7 @@ Motto: Weiche, Wotan, weiche.
   \end{enumerate}
   Der Ring $A$ heißt \highl{kommutativ}, wenn für alle $x,y\in A$ gilt:  $xy =
   yx$. Wenn ein neutrales Element für die Multiplikation existiert, heißt der
-  Ring \highl{Ring mit 1}.
+  Ring \highl{Ring mit 1} oder \highl[Ring!unitärer]{unitärer Ring}.
 \end{defini}
 
 \begin{bemerk}
@@ -2204,6 +2204,11 @@ Motto: Weiche, Wotan, weiche.
 \begin{defini}
   Wir definieren $A^{\ast}$ als die Menge der multiplikativ invertierbaren
   Elemente.
+\end{defini}
+
+\begin{defini}
+  Sei $R$ ein kommutativer unitärer Ring. Wenn für $x,y\in R$ gilt, $x\cdot
+  y=1$ gilt, heißen $x$ und $y$ \highl{Einheit}en.
 \end{defini}
 
 \begin{fakt}
@@ -2228,7 +2233,7 @@ Motto: Weiche, Wotan, weiche.
     \in \Z\}$
     
     \item Sei $\Z[\sqrt{2}] =\{a + b \sqrt{2}\colon a, b \in \Z\}$.    
-    Dieser Ring hat $\infty$ viele Einheiten:    
+    Dieser Ring hat unendlich viele Einheiten:    
     $\varepsilon = 3 + 2 \sqrt{2}$ ist Einheit: $(3 + 2 \sqrt{2}) (3 - 2
     \sqrt{2}) = 1$. Jedes $\varepsilon^m$ mit $m \in \Z$ ist Einheit.
   \end{enumerate}
