--- a/haberland-algebra/skript.ltx
+++ b/haberland-algebra/skript.ltx
@@ -837,7 +837,7 @@ Drehgruppen regul‰rer Vielecke veranschaulichen.
       \in \Z\colon \delta =  \alpha n + \beta d$. Weiter ist $x^{\delta} =
       \underbrace{= y^{\alpha}}_{x^{\alpha n}} x^{\beta d} \in H\Rightarrow
       \delta = d$ wegen der Minimalit‰t von $d$. Mithin $d / n$ \help{muss das
-      nicht 4d\mid n$ heiﬂen?}, somit $H =
+      nicht $d\mid n$ heiﬂen?}, somit $H =
       \langle x^d \rangle$.
     \end{enumerate}
   \end{enumerate}
