- Uebungsserien 11, 12, 13 eingepflegt - Vorlesung vom 2008-01-25
git-svn-id: https://svn.lug-jena.de/uni-skripte@1259 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/haberland-algebra/skript.ltx
+++ b/haberland-algebra/skript.ltx
@@ -1878,7 +1878,7 @@ konjugiert, wenn $\exists s\in G\colon sH_{1}s^{-1}=H_{2}$.
   Jede endliche Gruppe besitzt für jede Primzahl $p$ wenigstens eine
   $p$"~\textsc{Sylow}"~Gruppe.
   \begin{proof}
-    Wir wissen bereits, dass diese Aussage für abelsche gruppen korrekt ist.
+    Wir wissen bereits, dass diese Aussage für abelsche Gruppen korrekt ist.
     Nun fixieren wir $p\in\PP$ und machen Induktion über die Gruppenordnung.
     Der Satz ist korrekt für $(G\colon1)\leq p$.
 
@@ -1894,7 +1894,7 @@ konjugiert, wenn $\exists s\in G\colon sH_{1}s^{-1}=H_{2}$.
 
     Es folgt: $(G \colon 1) = \card(\text{Cent} (G)) + \sum (G \colon G_{x})$.
     Die Summe läuft über die nicht"=einelementigen Konjugationsklassen. [Sind
-    $x, y \in G$ aus derselben Bahn, so sind $G_{x, G_{y}}$ konjugiert] 
+    $x, y \in G$ aus derselben Bahn, so sind $G_{x}, G_{y}$ konjugiert] 
 
     Die Zahlen $(G \colon G_{x})$ rechts der großen Summe sind alle durch
     $p$ teilbar. Also hat auch das $\text{Cent} (G) = Z$ eine durch $p$
@@ -1912,7 +1912,7 @@ konjugiert, wenn $\exists s\in G\colon sH_{1}s^{-1}=H_{2}$.
 
 \begin{bsp}
   \begin{enumerate}
-    \item Sei $G = S_3$. Es gibt $2$-\textsc{Sylow}-Gruppen: $\langle(1,
+    \item Sei $G = S_3$. Es gibt drei $2$-\textsc{Sylow}-Gruppen: $\langle(1,
     2)\rangle, \langle(1, 3)\rangle, \langle(2, 3)\rangle$, eine
     $3$-\textsc{Sylow}-Gruppe: $A_3 = \langle(1, 2, 3)\rangle$.
     
@@ -1922,7 +1922,7 @@ konjugiert, wenn $\exists s\in G\colon sH_{1}s^{-1}=H_{2}$.
     \textsc{Klein}sche Vierergruppe: $\{\iota, (1, 2) (3, 4), (1, 3) (2, 4),
     (1, 4) (2, 3)\}$. Dies ist abelscher Normalteiler in $S_4$ und es ist
     $\sigma = (1, 2, 3, 4), \sigma^2 = (1, 3) (2, 4), \sigma^3 = (1, 4, 3,
-    2)$. Nach Definition gilt $H =\langle\sigma, (1, 3)\rangle =\iota, \sigma,
+    2)$. Nach Definition gilt $H =\langle\sigma, (1, 3)\rangle =\{\iota, \sigma,
     \sigma^2, \sigma^3, (1, 3), (2, 4), (1, 4) (2, 3), (1, 2), (3, 4)\}$.
     Weiter haben wir $(1, 2, 3, 4) (1, 3) = (1, 4) (2, 3), (1, 3) (1, 2, 3, 4)
     = (1, 2) (3, 4)$
@@ -2002,7 +2002,7 @@ konjugiert, wenn $\exists s\in G\colon sH_{1}s^{-1}=H_{2}$.
   
   $G = S_5, \abs{S_5} = 120 = 2^3 \cdot 3 \cdot 5$
   
-  $5$-\textsc{Sylow}-Gruppen: $N_5 = 6$ (Es gibt 24 5Zyklen, wobei jeweils 4
+  $5$-\textsc{Sylow}-Gruppen: $N_5 = 6$ (Es gibt 24 5-Zyklen, wobei jeweils 4
   dieselbe  Untergruppe erzeugen)
   
   Typische 5-\textsc{Sylow}-Gruppe $\langle(1, 2, 3, 4, 5)\rangle$
@@ -2017,7 +2017,7 @@ konjugiert, wenn $\exists s\in G\colon sH_{1}s^{-1}=H_{2}$.
 
 \begin{fakt}
   Sei $G$ eine $p$-Gruppe, d.\,h. die Ordnung von $G$ ist eine $p$-Potenz mit
-  $p \in P$. Dann hat $G$ ein nicht-triviales Zentrum.
+  $p \in \PP$. Dann hat $G$ ein nicht-triviales Zentrum.
 \begin{proof}
   $G$ zerfällt in Konjugationsklassen, die einelementigen entsprechen genau
   den Zentrumselementen. Wie oben ist $(G\colon 1) = (\text{Cent} G\colon 1) +
@@ -2252,7 +2252,7 @@ Motto: Weiche, Wotan, weiche.
   Natürlich gilt $f (0) = 0$ automatisch.
 \end{defini}
 
-\subsection{Ideal}
+\section{Ideal}
 Wir wollen nun die Eigenschaften der Kerne von Homomorphismen betrachten.
 Hierzu sei $f\colon A \rightarrow B$ ein Homomorphismus und $\fa= \ker (f)$.
 Dann ist:
@@ -2299,7 +2299,7 @@ Dann ist:
   A^{\ast}$
 \end{bemerk}
 
-\subsection{Operationen mit Idealen}
+\section{Operationen mit Idealen}
 
 Seien $\fa, \fb \subseteq A$ Ideale. Dann definieren wir die Addition:
 $\fa+\fb\coloneqq\{a + b\colon a \in \fa, b \in \fb\}$
@@ -3224,7 +3224,7 @@ $P (t) = \sum a_n e^{2 \pi int}$ mit $P\colon \R \rightarrow \C$.
 
 \begin{defini}
   Sei $K$ ein Körper, $f\in K[X_{1},\dotsc, X_{n}]$. Das Polynom heißt
-  \highl{symmterisch}, wenn $f(X_{1},\dotsc, X_{n})= f(X_{\sigma(1)},\dotsc,
+  \highl{symmetrisch}, wenn $f(X_{1},\dotsc, X_{n})= f(X_{\sigma(1)},\dotsc,
   X_{\sigma(n)})$ für alle $\sigma\in S_{n}$.
 \end{defini}
 
@@ -3375,12 +3375,12 @@ Wir hatten für Ringhomomorphismen verlangt $f(1)=1$.
 
 \begin{defini}
   Sei $K\subseteq L$. Dann heißt $K$ \highl{Unterkörper} oder
-  \highl{Teilkörper} und $L$ \highl{Oberkörper} von $K$. Man nennt $L|K$ auch
+  \highl{Teilkörper} und $L$ \highl{Oberkörper} von $K$. Man nennt $L/_K$ auch
   Körpererweiterung.
 \end{defini}
 
 \begin{bemerk}
-  Der Durchschnitt vun Unterkörpern ist wieder ein Unterkörper.
+  Der Durchschnitt von Unterkörpern ist wieder ein Unterkörper.
 \end{bemerk}
 
 \begin{defini}
@@ -3459,7 +3459,7 @@ Ist $E/_F$ eine Körpererweiterung, so ist $E$ ein Vektorraum über $F$.
 \begin{bsp}
   Sei $\C/_\Q$ und $\overline{\Q}$ alle $\alpha \in \C$, die algebraisch über
   $\Q$ sind. Dann ist $\overline{\Q}$ ist abzählbar. Man bezeichnet $z \in \C$
-  als \highl{tanszendent}, falls es nicht algebraisch über $\Q$ ist.
+  als \highl{transzendent}, falls es nicht algebraisch über $\Q$ ist.
 \end{bsp}
 
 \begin{bemerk}
@@ -3542,7 +3542,7 @@ Ist $E/_F$ eine Körpererweiterung, so ist $E$ ein Vektorraum über $F$.
 \begin{bemerk}
   \begin{enumerate}
     \item Die Bezeichnungen $\Q(i), \R(i), \Q(\sqrt{2})$ haben nun
-    nichformalen Sinn.
+    nichtformalen Sinn.
     
     \item Solch ein kleinster Teilkörper existiert. Man nehme den
     Durchschnitt aller $K$ und $\alpha$ umfassender Teilkörper in $E$.
@@ -3612,7 +3612,7 @@ Ist $E/_F$ eine Körpererweiterung, so ist $E$ ein Vektorraum über $F$.
 
 \begin{defini}
   Sei $K/_k$ \help{stimmt das k hier?} eine Körpererw, $k \subset E, F \subset
-  K$ Zwischenkörper. Das \highl{Kompositum} von $E, F$ ist der kleinste
+  K$ Zwischenkörper. Das \highl{Kompositum} von $E$ und $F$ ist der kleinste
   Teilkörper in $K$, welcher $E$ und $F$ umfasst. Bezeichnung $E \cdot F$.
 \end{defini}
 
@@ -4662,7 +4662,174 @@ bezeichnet.
     in $G$ ist.
    \item In diesem Falle ist $\Gal(E/_{k})= G/_{\Gal(K/_{E})}$.
   \end{enumerate}
+%Vorlesung vom 2008-01-25
+  \begin{proof}
+    \begin{enumerate}
+     \item Sei $E/_{k}$ normal. Dann ist $E/_{k}$ eine
+      \textsc{Galois}"~Erweiterung und wir erhalten durch
+      $\Gal(K/_{k})\rightarrow\Gal(E/_{k}), \sigma\mapsto\sigma|E$ einen
+      Gruppenhomomorphismus, wegen der Starrheit normaler Erweiterungen. Der
+      Kern dieses Homomorphismus ist $\Gal(K/_{E})=H$. Also ist $H$ ein
+      Normalteiler. Nach den Turmsätzen gilt
+      \begin{gather*}
+	[E\colon k]= \frac{[K\colon k]}{[K\colon E]}=
+	   \frac{(G\colon1)}{(H\colon1)}= (G/_{H}\colon1)
+      \end{gather*}
+      Also haben $G/_{H}$ und $\Gal(E/_{k})$ dieselbe Ordnung. Somit gibt es
+      einen kanonischen Isomorphismus $G/_{H}\rightarrow\Gal(E/_{k})$.
+     \item Zunächst ein kleines Lemma: Sei $\sigma\in\Gal(K/_{k}),
+      K/_{E/_{k}}$. Dann ist $\Gal(K/_{\sigma(E)})=
+      \sigma\Gal(K/_{E})\sigma^{-1}$. Denn $\Gal(K/_{\sigma(E)})= \{\tau\in
+      G\colon \tau\alpha=\alpha\ \forall\alpha\in\sigma E\}= \{\tau\in G\colon
+      \tau\sigma\beta= \sigma\beta\ \forall\beta\in E\}= \{\tau\in G\colon
+      \sigma^{-1}\tau\sigma\beta= \beta\ \forall\beta\in E\}= \{\tau\in
+      G\colon \sigma^{-1}\tau\sigma\in H\}$.
+
+      Ist also $H=\Gal(K/_{E})$ ein Normalteiler in $G$, so folgt, $\sigma
+      E=E$ für alle $\sigma\in G$. Hieraus folgt, $E/_{k}$ ist normal. % Denn
+%       wenn $E$ in den algebraischen Abschluss eingebettet wird ($\sigma\colon
+%       E\rightarrow\overline{k}$), so setzt sie sich fort zu
+%       $\overline{\sigma}\colon K\rightarrow\overline{k}$. Es ist
+%       $\overline{\sigma}(K)=K\Rightarrow \overline{\sigma}\in\Gal(K/_{k})
+%       \Rightarrow\sigma E=E$.
+    \end{enumerate}
+  \end{proof}
 \end{satz}
+
+\section{Beispiele}
+
+\begin{bsp}
+  \begin{enumerate}
+   \item Es ist $\C/_{\R}$ eine \textsc{Galois}"~Erweiterung mit
+    $\Gal(\C/_{\R})= \{\iota, \text{ komplexe Konjugation}\}$.
+   \item Die \textsc{Galois}gruppe eines Polynoms: 
+  \end{enumerate}
+\end{bsp}
+
+\subsection{Die \textsc{Galois}gruppe eines Polynoms}
+
+Sei $k$ ein Körper, $f\in k[X]$ und $K$ der Zerfällungskörper von $f$ in
+$\overline{k}$. Weiter sei $f$ separabel (ohne mehrfache Wurzeln) und
+$W=\{\alpha_{1},\dotsc,\alpha_{n}\}\subset \overline{k}$ die Menge aller
+Wurzeln von $f$. Es ist $K=k(W)$ der Zerfällungskörper von $f$. Dann ist
+$K/_{k}$ eine \textsc{Galois}"~Erweiterung.
+
+Sei $S(W)$ die Permutationsgruppe von $W$. Wir haben einen Homomorphismus
+$\Gal(K/_{k})\rightarrow S(W), \sigma\mapsto
+\begin{pmatrix}
+\alpha_{1} & \alpha_{2} & \dotso & \alpha_{n}\\
+  \sigma(\alpha_{1}) & \sigma(\alpha_{2}) & \dotso & \sigma(\alpha_{n})
+\end{pmatrix}
+$. Denn jedes solche $\sigma$ permutiert $W$. Wir zeigen: Er ist injektiv.
+
+Sei dazu $\sigma\in\Gal(K/_{k})$ mit $\sigma\alpha_{i}=\alpha_{i}$ für alle
+$i$. Jedes Element aus $K$ ist $k$"~Linearkombination von Monomen in den
+$\alpha_{1},\dotsc,\alpha_{n}$. Also lässt $\sigma$ jedes Element aus $K$
+fest. Damit folgt $\sigma=\iota$ (Identität).
+
+\begin{defini}
+  Das Bild von $\Gal(K/_{k})$ in $S(W)$ heißt \highl{\textsc{Galois}gruppe}
+  von $f$.
+\end{defini}
+
+\begin{bemerk}
+  Im Allgemeinen ist die \textsc{Galois}gruppe von $f$ kleiner als $S(W)$.
+  Die Ordnung von $\Gal(f)\leq(\deg f)!$. %(sic!)
+\end{bemerk}
+
+\subsection{Ein numerisches Beispiel}
+Sei $k=\Q, f=X^{4}-2\in\Q[X], \overline{k}= \overline{\Q}\subseteq\C$. Das
+Polynom $f$ ist irreduzibel in $\Q$ mit den Wurzeln:
+$\alpha=\sqrt[4]{2}\in\R^{\ast}_{+}, i\alpha, -\alpha, -i\alpha$. Nach der
+allgemeinen Theorie ist $[\Q(\alpha)\colon\Q]= 4$. Sei $K$ der
+Zerfällungskörper von $f$. Dann ist $i\in K$. Also $\Q(\alpha, i)\subset K$.
+Alle vier Wurzeln sind schon in $\Q(\alpha,i)$, also $K=\Q(\alpha,i)$ und es
+ist $[\Q(\alpha,i)\colon\Q]=8$. Die \textsc{Galois}gruppe ist daher eine
+achtelementige Untergruppe in $S_{4}$.
+
+Jeder Automorphismus aus $\Gal(f)$ ist eindeutig bestimmt durch seine Wirkung
+auf $\alpha$ und auf $i$. Wir haben $\sigma\colon\alpha\mapsto i\alpha$ und es
+folgt, $i\rightarrow i$,  d.\,h. das $i$ bleibt fest. Denn
+$[\Q(\alpha,i)\colon\Q(i)]= 4$ und $\Q(\alpha,i)$ entsteht aus $\Q(i)$ durch
+Adjunktion einer beliebigen Wurzeln von $f$. Also ist es eine
+\textsc{Galois}"~Erweiterung und $\sigma\colon\alpha \mapsto i\alpha$ erzeugt
+die \textsc{Galois}gruppe $\Gal(\Q(\alpha,i)/_{\Q(i)})\subset
+\Gal(\Q(\alpha,\in)/_{\Q})$. Weiter ist $[K\colon \Q(\alpha)]=2,
+\Gal(K/_{\Q(\alpha)})= \{\iota, \tau\}, \tau\colon i\mapsto-i,
+\tau\colon\alpha\mapsto\alpha$. Dabei ist $K$ der Zerfällungskörper von
+$X^{2}+1$.
+
+Also $\sigma, \tau\in\Gal(K/_{\Q}). $Es gilt, $\sigma^{4}=\iota= \tau^{2}$ und
+$\tau\sigma=\sigma^{3}\tau\Rightarrow\Gal(K/_{\Q})= \{1, \sigma, \sigma^{2},
+\sigma^{3}, \tau, \sigma\tau, \sigma^{2}\tau, \sigma^{3}\tau\}$ und $\Gal(f)=
+\{\iota, (1,3), (2,4), (1,2,3,4), (1,4,3,2), (1,2)(3,4), (1,3)(2,4),
+  (1,4)(2,3)\}$. Dies ist eine 2-\textsc{Sylow}"~Gruppe in $S_{4}$.
+\begin{gather*}
+  \begin{xy}
+    \xymatrix{
+      G\\ %%auf unetere drei
+      \{1,\sigma^{2}, \tau, \sigma^{2}\tau\} %% auf 1,2,3 unten
+      & \{1,\sigma, \sigma^{2}, \sigma^{3}\} %% auf 3 unten &
+      \{1, \sigma^{2}, \sigma\tau, \sigma^{3}\tau\}\\ %% auf 3,4,5 unten
+      \{1,\tau\} & \{1,\sigma^{2}\tau\} & \{1, \sigma^{2}\} & \{1,
+    \sigma\tau\} & 1, \sigma^{3}\tau\}\\
+    \{\iota\}
+      }
+  \end{xy}
+\end{gather*}
+
+Normalteiler sind $\{\iota\}, G$ und die vierelementigen. Untergruppen vom
+Index 2 sind stets Normalteiler: $xH=Hx$ wgen $xH=H\Rightarrow x\in
+H\Rightarrow xH=Hx, xH\neq H\Rightarrow xH=G\setminus H, x\notin H, Hx\neq
+H\Rightarrow Hx=G\setminus H\Rightarrow xH=Hx$. Weiter ist das Zentrum von $G$
+($\{1,\sigma^{2}\}$) ein Normalteiler. Wir bestimmen alle Zwischenkörper:
+
+\begin{gather*}
+  \begin{xy}
+    \xymatrix{
+      \Q\\
+      \Q(\alpha) & \Q(i) & \Q(i\alpha^{2})\\
+      \Q(\alpha) & \Q(i\alpha) & \Q(\alpha^{2},i) & \Q((1+i)\alpha &
+    \Q((1-i)\alpha) \\
+      \Q(\alpha,i)}
+  \end{xy}
+\end{gather*}
+
+Man errät die drei quadratischen Erweiterungen von $\Q$: $\Q(i),
+\Q(\alpha), \Q(i\alpha^{2})$. Es gehört $\Q(i)$ zu $\{1,\sigma,\sigma^{2},
+\sigma^{3}\}$. Was gejört nun zu $\{1, \sigma^{2}, \tau, \sigma^{2}\tau\}$? Es
+ist $\sigma^{2}(\alpha^{2})=(\sigma^{2}(\alpha)^{2}= (\sigma(i\alpha))^{2}=
+(-\alpha)^{2}= \alpha^{2}=\sqrt{2}$ und $\tau(\alpha^{2})=\alpha^{2}$.
+Proberechnung zur dritten: $\sigma^{2}(i\alpha^{2})=
+\sigma^{2}(i)\sigma^{2}(\alpha^{2})= i\alpha^{2}$ und
+$\sigma\tau(i\alpha^{2})= \sigma(-i\alpha^{2})= -i(-\alpha^{2})= i\alpha^{2}$.
+
+Nun die Zerfällungskörper vom Grad 4: Drei Stück kann man erraten:
+$\Q(\alpha), \Q(i\alpha), \Q(i,\alpha^{2})$. Es lässt das $\tau$ das $\alpha$
+fix. Also zu $\{1, \tau\}$ gehört $\Q(\alpha)$, $\sigma^{2}\tau$ lässt
+$i\alpha$ fest, also $\sigma^{2}\tau(i\alpha)= \sigma^{2}(-i\alpha)=
+-i\sigma^{2}\alpha= -i(-\alpha)= i\alpha, \sigma^{2}i=i,
+\sigma^{2}(\alpha^{2})= \alpha^{2}$. Nun fehlen noch zwei Zwischenkörper vom
+Grad 4: Die zu $\{1, \sigma\tau\}$ und $\{1, \sigma^{3}\tau\}$. Eine
+$\Q$"~Basis von $\Q(\alpha, i)$ ist $1,\alpha, \alpha^{2}, \alpha^{3}, i,
+i\alpha, i\alpha^{2}, i\alpha^{3}\}$ und es gilt: $x=a_{0}+ a_{1}\alpha+
+a_{2}\alpha^{2}+ a_{3}\alpha^{3}+ a_{4}i +a_{5}i\alpha+ a_{6}i\alpha^{2}+
+a_{7}i\alpha^{3}$ für $a_{j}\in\Q$. Nun ist $\sigma(1)=1,
+\sigma\tau(\alpha)=i\alpha, \sigma\tau(\alpha^{2})=-\alpha^{2},
+\sigma\tau(\alpha^{3})= -i\alpha^{3}, \sigma\tau(i)= -i, \sigma\tau(i\alpha)=
+-i(i\alpha)= \alpha, \sigma\tau(i\alpha^{2})= -i(-\alpha^{2})= i\alpha^{2},
+\sigma\tau(i\alpha^{3})= -i(-i\alpha^{3})= -\alpha^{3}$.
+
+Damit ergibt sich für $\sigma\tau x=x\Leftrightarrow a_{1}=a_{5}, a_{2}=0,
+a_{3}+ a_{7}=0, a_{4}=0 \Leftrightarrow x=a_{0}+a_{1}(1+i)\alpha+
+a_{3}(1-i)\alpha^{3}+ a_{6}i\alpha^{2}\Rightarrow \beta= (1+i)\alpha$ ist
+invertierbar unter $\sigma\tau$. Wir haben $\beta^{2}= (1+2i-1)\alpha^{2}=
+2i\sqrt{2}= 2\sqrt{-2}$ und $\beta^{4}= -8$, d.\,h. $\beta$ ist Wurzeln von
+$X^{4}+8\in\Q[X]\Rightarrow[\Q(\beta)\colon\Q]=4$.
+
+Letzte Anmerkung: f(2X)= $16X^{4}+8= 8(2X^{4}+1)=
+      8X^{4}((\nicefrac{1}{X})^{4}+ 2)$ und \textsc{Eisenstein} anwenden.
+
 
 
 \appendix
@@ -4821,6 +4988,63 @@ von den anderen Inhalten zu betrachten.
 \end{enumerate}
 
 
+
+
+\chapter{Übungsaufgaben}
+
+\section*{11. Übungsserie}
+\begin{enumerate}
+ \item Berechnen Sie alle Primitivwurzeln modulo 17.
+ \item Sei $p>2$ eine Primzahl. Wieviel Primitivwurzeln modulo $p$ gibt es?
+ \item Zeigen Sie, dass jede Erweiterung $E/_{F}$ endlicher Körper normal ist.
+ \item Bestimmen Sie alle Automorphismen von $\F_{q^{n}}$, welche auf $\F_{q}$
+  die Identität sind.
+ \item Zeigen Sie, dass jeder algebraisch abgeschlossene Körper unendlich ist.
+ \item Finden Sie ein primitives Element für die Erweiterung $\Q(\sqrt{2},
+  \sqrt{-1})/_{\Q}$.
+\end{enumerate}
+
+\section*{12. Übungsserie}
+\begin{enumerate}
+ \item Bestimmen Sie die \textsc{Galois}gruppe des Polynoms $X^{3}-10$ über
+  $\Q$.
+ \item Bestimmen Sie Zerfällungskörper und \textsc{Galois}gruppe des Polynoms
+  $X^{3}-X-1$ über $\Q$. Berechnen Sie alle Zwischenkörper und die zugehörigen
+  Untergruppen.
+ \item Seien $E,F\subset\overline{K}$ \textsc{Galois}"~Erweiterungen von $K$
+  sowie $E\cap F=K$. Zeigen Sie, dass gilt:
+  \begin{gather*}
+    \Gal(EF/_{K})\simeq\Gal(E/_{K})\times\Gal(F/_{K})
+  \end{gather*}
+ \item Sei $A$ eine endliche abelsche Gruppe. Zeigen Sie, dass es
+  Erweiterungen $K/_{\Q}$ mit \textsc{Galois}gruppe $A$ gibt. (Wenn Sie das
+  für beliebige endliche Gruppen zeigen können, erhalten Sie eine
+  \textsc{Fields}"~Medaille.)
+\end{enumerate}
+
+\section*{13. Übungsserie}
+
+Es sei $k$ stets ein Körper mit $\chr(k)\neq2,3$.
+\begin{enumerate}
+ \item Zeigen Sie: Jedes Polynom dritten Grades aus $k[X]$ lässt sich durch
+  $k$"~lineare Variablensubstitution auf die Gestalt $X^{3}+pX+q$ bringen mit
+  $p,q\in k$.
+ \item Sei $f=X^{3}+pX+q\in k[X]$ irreduzibel. Zeigen Sie:
+  \begin{enumerate}[(i)]
+   \item Der Zerfällungskörper von $f$ hat die \textsc{Galois}gruppe
+    $S_{3}\Leftrightarrow$ Die Diskriminante $D_{f}$ von $f$ ist kein Quadrat
+    in $k$.
+   \item In diesem Fall ist der Fixpunktkörper von $A_{3}$ gleich
+    $k(\sqrt{D_{f}})$.
+  \end{enumerate}
+ \item Seien $x_{1}, x_{2}, x_{2}\in\overline{k}$ die Wurzeln von
+  $f=X^{3}+pX+q$ sowie $\zeta\in\overline{k}$ eine primitive dritte
+  Einheitswurzel. Weiter sei $y\coloneqq x_{1}+\zeta x_{2}+\zeta^{2}x_{3}, z=
+  x_{1}+\zeta^{2}x_{2}+\zeta x_{3}$. Zeigen Sie
+  $y^{3}=-\frac{27}{2}q+\frac{3}{2} \sqrt{-3}\sqrt{D_{f}}, z^{3}=
+  -\frac{27}{2} q-\frac{3}{2}\sqrt{-3}\sqrt{D_{f}}$ sowie $3x_{1}= y+z,
+  3x_{2}= \zeta^{2}y+\zeta z, 3x_{3}= \zeta y+\zeta^{2}z$.
+\end{enumerate}
 
 \chapter{Klausuraufgaben}
 
