Schreibfehler: bei „oft“ das T ergänzt
git-svn-id: https://svn.lug-jena.de/uni-skripte@1263 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/vogel-krypt/skript.latex
+++ b/vogel-krypt/skript.latex
@@ -1326,7 +1326,7 @@ Es gibt zwei verschiedene Ansätze der Verschlüsselung:
   zu viele Vokale für einen deutschen Text.
 
   Idee: 1. und letzte Spalte liegen nebeneinander, da auf ein \textit{c} sehr
-  of ein \textit{k} oder ein \textit{h} folgt.
+  oft ein \textit{k} oder ein \textit{h} folgt.
 
   Die sechste Spalte kommt vor die erste und dann können wir das Wort in der
   ersten Zeile erraten "`zwei"': 3., 5., 1., 6., 2., 4.
