--- a/haberland-algebra/skript.ltx
+++ b/haberland-algebra/skript.ltx
@@ -2002,7 +2002,7 @@ konjugiert, wenn $\exists s\in G\colon sH_{1}s^{-1}=H_{2}$.
   
   $G = S_5, \abs{S_5} = 120 = 2^3 \cdot 3 \cdot 5$
   
-  $5$-\textsc{Sylow}-Gruppen: $N_5 = 6$ (Es gibt 24 5-Zyklen, wobei jeweils 4
+  $5$-\textsc{Sylow}-Gruppen: $N_5 = 6$ (Es gibt 24~5-Zyklen, wobei jeweils 4
   dieselbe  Untergruppe erzeugen)
   
   Typische 5-\textsc{Sylow}-Gruppe $\langle(1, 2, 3, 4, 5)\rangle$
@@ -2096,9 +2096,9 @@ konjugiert, wenn $\exists s\in G\colon sH_{1}s^{-1}=H_{2}$.
   \begin{enumerate}
     \item $S_3 \supset A_3 \supset \{\iota\} \Rightarrow S_3$ auflösbar.
     
-    \item Sei $S_4 \supset A_4 \supset V \supset \{\iota\}$. Dann ist $V$ die
-    \textsc{Klein}sche Vierergruppe:  $V =\{\iota, (1, 2) (3, 4), (1, 3) (2,
-    4), (1, 4) (2, 3)\}$ und $V$ ist Normalteiler in $S_4\Rightarrow S_4$
+    \item Sei $S_4 \supset A_4 \supset V \supset \{\iota\}$. Dann ist $V =\{\iota, (1, 2) (3, 4), (1, 3) (2,
+    4), (1, 4) (2, 3)\}$ und wird als \textsc{Klein}sche Vierergruppe
+    bezeichnet. Weiterhin ist $V$ Normalteiler in $S_4\Rightarrow S_4$
     auflösbar.
     
     \item Satz von \textsc{Feit} und \textsc{Thompson}: Jede Gruppe ungerade
