Jörg Sommer als Helfer für 2008 eingetragen
git-svn-id: https://svn.lug-jena.de/uni-skripte@1284 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -265,7 +265,7 @@
   haben, vielmals danken:
   \begin{itemize}
    \item \href{mailto:joerg@alea.gnuu.de}{Jörg Sommer
-    \texttt{<joerg@alea.gnuu.de>}} (2004/05/07)
+    \nolinkurl{<joerg@alea.gnuu.de>}} (2004/05/07/08)
    \item Katrin Hilse (2005)
    \item \href{mailto:Markus-Weimar@t-online.de}{Markus Weimar
     \nolinkurl{<Markus-Weimar@t-online.de>}} (2007)
