Zu volle Boxen im Vorwort und im Literaturverz. entfernt
git-svn-id: https://svn.lug-jena.de/uni-skripte@1285 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -245,24 +245,24 @@
   Mitglieder des Projekts für dessen Fehlerfreiheit. Für etwaige Fehler
   und dessen Folgen wird von keiner der genannten Personen eine Haftung
   übernommen. Es steht jeder Person frei, dieses Skript zu lesen, zu
-  verändern oder auf anderen Medien verfügbar zu machen, solange ein
-  Verweis die Internetadresse
-  \url{http://www.minet.uni-jena.de/~joergs/skripte/} des Projekts
+  verändern oder auf anderen Medien verfügbar zu machen und es an andere zu
+  verteilen, solange ein Verweis die Internetadresse des Projekts
+  \url{http://www.minet.uni-jena.de/~joergs/skripte/}
   enthalten ist.
 
-  Diese Ausgabe trägt die Versionsnummer~\SVNLastChangedRevision\ und ist
-  vom \SVNDate. Eine (mögliche) aktuellere Ausgabe ist unter
-  \url{http://www.minet.uni-jena.de/~joergs/skripte/pdf/} verfügbar.
+  Diese Ausgabe trägt die Versionsnummer~\SVNLastChangedRevision{} und ist vom
+  \SVNDate{}. Eine aktuellere Ausgabe könnte auf der oben genannten
+  Internetseite verfügbar sein.
 
   Jeder ist dazu aufgerufen, Verbesserungen, Erweiterungen und
   Fehlerkorrekturen für das Skript einzureichen bzw. zu melden oder selbst
-  einzupflegen -- einfach eine eMail an die
-  \href{mailto:skripte@listserv.uni-jena.de}{Mailingliste
-  \texttt{<skripte@listserv.uni-jena.de>}} senden. Weitere Informationen
+  einzupflegen -- einfach eine E"~Mail an die
+  \href{mailto:skripte@listserv.uni-jena.de}{Mailingliste des Projekts
+  \nolinkurl{<skripte@listserv.uni-jena.de>}} senden. Weitere Informationen
   sind unter der oben genannten Internetadresse des Projekts verfügbar.
 
-  Hiermit möchten wir allen Personen, die an diesem Skript mitgewirkt
-  haben, vielmals danken:
+  Hiermit möchten wir uns vielmals bei den folgenden Personen für ihre
+  Mitarbeit am Skript bedanken:
   \begin{itemize}
    \item \href{mailto:joerg@alea.gnuu.de}{Jörg Sommer
     \nolinkurl{<joerg@alea.gnuu.de>}} (2004/05/07/08)
@@ -301,7 +301,7 @@
  \bibitem{Schröder} H.\,Schröder: Funktionalanalysis, Harri Deutsch 2000
  \bibitem{Heuser} H.\,Heuser: Funktionalanalysis, Teubner 1992
  \bibitem{Hirzebruch} Hirzebruch, Scharlau: Einführung in die
-  Funktionalanalysis, B.\,I.\,Wissenschaftsverlag Mannheim 1991 (für
+  Funktionalanalysis, B.\,I.\,Wissen"-schafts"-verlag Mannheim 1991 (für
   2.~Semester)
  \bibitem{Appell} J.\,Appell, M.\,Väth: Elemente der Funktionalanalysis,
   Vieweg, Wiesbaden 2005 (für 2.~Semester)
